--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ajv": "6.12.6",
+    "ajv-keywords": "3.5.2",
     "axios": "^1.6.7",
     "chart.js": "^4.4.2",
     "concurrently": "^8.2.2",
