--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "react-type-animation": "^3.2.0",
+    "resend": "^6.4.1",
     "swiper": "^11.0.5",
     "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
